Expand Spring and ML case studies to production depth
Spring (23 modules + 5 dedicated case studies):
- All 23 module Case Studies expanded to 125-310L each
- 6 weakest modules (spring_aop, spring_testing, spring_transactions,
  spring_cloud_patterns, spring_performance, spring_boot_configuration)
  expanded with full production scenarios, BROKEN→FIX patterns, and 5+ Q&As
- Remaining 17 modules topped off to 125L+ with targeted war stories and Q&As
- 5 dedicated case studies deepened to 966-1075L each with failure scenarios,
  capacity planning, multi-region considerations, and additional interview Q&As

ML (32 modules + 10 dedicated case studies):
- All 32 module Case Studies expanded to 150-330L each using Python 3.10+ type hints
- Production anchors: Netflix recommendation (two-tower, FAISS), XGBoost fraud
  detection (SHAP, cost-matrix threshold), PSI drift monitoring, DDP/FSDP
  distributed training, GPTQ/AWQ quantization, DDPM medical imaging, LSTM log
  anomaly detection, SimCLR/BYOL contrastive learning
- 10 dedicated case studies deepened to 884-1059L each with BROKEN→FIX Python,
  capacity planning math, failure scenarios, and 5 additional interview Q&As

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>